# CRUD-Cliente

./: README.md  clientes.json  functions.py  main.py  pyproject.toml
