[project]
name = "projeto-crud"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcos Henrique",email = "marcos-henrique-11@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "projeto_crud", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
